<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.InsertUserFragment"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_nuevo_usuario"
        android:textSize="22sp"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/insert_carnet_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_carnet"
        android:inputType="number"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/insert_department_field"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_materia"
            />
        <EditText
            android:id="@+id/insert_note_field"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_nota"/>
    </LinearLayout>
    <EditText
        android:id="@+id/insert_catedratico_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_catedratico"
        android:layout_marginBottom="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:layout_width="wrap_content"
            android:drawableTint="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/agregar"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"

            />
    </LinearLayout>



</LinearLayout>